charts/docs/vxfuel/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vxfuel-deployment
  labels:
    app: vxfuel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vxfuel
  template:
    metadata:
      labels:
        app: vxfuel
    spec:
      hostname: panther2
      containers:
      - name: vxfuel
        image: us-east1-docker.pkg.dev/ret-edge-pltf-infra/workloads/vxfuel:latest
#        ports:
#        - containerPort: 80
