charts/docs/vxfuel/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vxfuel
spec:
  selector:
    app.kubernetes.io/name: vxfuel
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
